<resources>
    <string name="channel_name">VolumeScheduler</string>

    <string name="app_name">Volume scheduler</string>
    <string name="sunday">日</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>

    <string name="add_setting_title">設定の追加</string>
    <string name="add_setting_time_title">設定したい時刻</string>
    <string name="add_setting_day_of_the_week_title">設定する曜日</string>
    <string name="add_setting_setting_title">設定</string>

    <string name="delete_confirm_message">削除しますか？</string>
    <string name="set_item_message">設定しました。</string>

    <string name="notification_text">音量をゼロにしました！</string>
</resources>
